updated openshift env variables

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-2 col-sm-2 col-xs-2 sidebar" ng-controller="SidebarController">
+        <div class="col-md-2 col-sm-2 col-xs-2 sidebar"
+              ng-controller="SidebarController">
             <ng-include src="'client/view/sidebar/sidebar.view.html'"></ng-include>
         </div>
     <div class="container-fluid col-md-10 col-sm-10 col-xs-10">
